fix: align content in the footer

--- a/online-zoo/pages/landing/landing.css
+++ b/online-zoo/pages/landing/landing.css
@@ -1762,7 +1762,7 @@ header {
     text-align: center;
   }
   .slider__items { 
-    width: 100%;
+    width: 600px;
     max-width: 600px;
     height: 390px;
     flex-direction: column;
@@ -2018,11 +2018,10 @@ header {
     width: 264px;
     height: 49px;
     flex-direction: row;
-    margin-right: 128px;
+    margin-right: 125px;
   }
   .footer__button-and-links {
-    margin-right: 0;
-    margin-right: 51px;
+    margin-right: 45px;
     height: 302px;
   }
   .footer__online-zoo-logo {
@@ -2144,6 +2143,7 @@ header {
   }
   .slider__items { 
     max-width: 300px;
+    width: 300px;
     height: 300px;
     column-gap: 20px;
     row-gap: 20px;
